<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.doublerobot</groupId>
    <artifactId>shade-test</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>15</version>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.9.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-project-info-reports-plugin</artifactId>
                    <version>3.1.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>3.1.2</version>
                </plugin>
                <plugin>
                    <groupId>io.github.wiverson</groupId>
                    <artifactId>jtoolprovider-plugin</artifactId>
                    <version>1.0.22-SNAPSHOT</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>3.0.0-M1</version>
                <!-- This is an app, so we don't want to install it in the Maven local repository -->
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.5</version>
                <configuration>
                    <mainClass>com.doublerobot.HelloWorld</mainClass>
                </configuration>
            </plugin>

        </plugins>
    </build>

    <profiles>
        <profile>
            <id>build-installer</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-shade-plugin</artifactId>
                        <version>3.2.4</version>
                        <configuration>
                            <finalName>shade-test</finalName>
                            <artifactSet>
                                <excludes>
                                    <exclude>**/module-info.java</exclude>
                                    <exclude>**/module-info.class</exclude>
                                    <exclude>module-info.java</exclude>
                                    <exclude>module-info.class</exclude>
                                    <exclude>org.openjfx:javafx-base</exclude>
                                    <exclude>org.openjfx:javafx-controls</exclude>
                                    <exclude>org.openjfx:javafx-fxml</exclude>
                                    <exclude>org.openjfx:javafx-graphics</exclude>
                                    <exclude>org.openjfx:javafx-media</exclude>
                                    <exclude>org.openjfx:javafx-swing</exclude>
                                    <exclude>org.openjfx:javafx-web</exclude>
                                </excludes>
                            </artifactSet>
                        </configuration>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>shade</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>io.github.wiverson</groupId>
                        <artifactId>jtoolprovider-plugin</artifactId>
                        <version>1.0.22-SNAPSHOT</version>
                        <executions>
                            <execution>
                                <id>jdeps</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>java-tool</goal>
                                </goals>
                                <configuration>
                                    <toolName>jdeps</toolName>
                                    <args>
                                        <arg>--module-path</arg>
                                        <arg>${project.basedir}/javafx-sdk-15.0.1/lib/</arg>
                                        <arg>--add-modules</arg>
                                        <arg>javafx.base,javafx.controls,javafx.graphics,java.logging</arg>
                                        <arg>--generate-module-info</arg>
                                        <arg>${project.build.directory}/work</arg>
                                        <arg>${project.build.directory}/shade-test.jar</arg>
                                    </args>
                                </configuration>
                            </execution>
                            <execution>
                                <phase>package</phase>
                                <id>compile-module-info</id>
                                <goals>
                                    <goal>java-tool</goal>
                                </goals>
                                <configuration>
                                    <toolName>javac</toolName>
                                    <failOnError>true</failOnError>
                                    <args>
                                        <arg>--source</arg>
                                        <arg>15</arg>
                                        <arg>--target</arg>
                                        <arg>15</arg>
                                        <arg>-p</arg>
                                        <arg>shade.test,javafx.base,javafx.controls,javafx.graphics,java.logging</arg>
                                        <arg>--module-path</arg>
                                        <arg>${project.basedir}/javafx-sdk-15.0.1/lib/</arg>
                                        <arg>--class-path</arg>
                                        <arg>${project.build.directory}/classes</arg>
                                        <arg>-d</arg>
                                        <arg>${project.build.directory}/classes</arg>
                                        <arg>${project.build.directory}/work/shade.test/module-info.java</arg>
                                    </args>
                                </configuration>
                            </execution>
                            <execution>
                                <phase>package</phase>
                                <id>add-module-info-to-jar</id>
                                <goals>
                                    <goal>java-tool</goal>
                                </goals>
                                <configuration>
                                    <toolName>jar</toolName>
                                    <args>
                                        <arg>--update</arg>
                                        <arg>--file</arg>
                                        <arg>${project.build.directory}/${project.artifactId}.jar</arg>
                                        <arg>--main-class</arg>
                                        <arg>com.doublerobot.HelloWorld</arg>
                                        <arg>${project.build.directory}/classes/module-info.class</arg>
                                    </args>
                                </configuration>
                            </execution>
                            <execution>
                                <id>build-installers</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>java-tool</goal>
                                </goals>
                                <configuration>
                                    <toolName>jpackage</toolName>
                                    <args>
                                        <arg>--jlink-options</arg>
                                        <arg>--strip-native-commands --strip-debug --no-header-files --no-man-pages
                                            --compress=2
                                        </arg>
                                        <arg>--name</arg>
                                        <arg>TestApp</arg>
                                        <arg>--icon</arg>
                                        <arg>${project.basedir}/app-icon.icns</arg>
                                        <arg>--module-path</arg>
                                        <arg>
                                            ${java.home}/jmods/:${project.build.directory}/classes:${project.basedir}/javafx-jmods-15.0.1/
                                        </arg>
                                        <arg>--add-modules</arg>
                                        <arg>shade.test,javafx.base,javafx.controls,javafx.graphics,java.logging</arg>
                                        <arg>-m</arg>
                                        <arg>shade.test/com.doublerobot.HelloWorld</arg>
                                        <arg>--dest</arg>
                                        <arg>${project.build.directory}</arg>
                                    </args>
                                </configuration>
                            </execution>

                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

    </profiles>


</project>